--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+#don't check in /public for Hugo
+/public
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
