--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,4 @@
-version: 0.1
+version: 0.2
 
 environment_variables:
   plaintext:
@@ -6,6 +6,8 @@ environment_variables:
     
 phases:
   install:
+    runtime-versions:
+      docker: 18
     commands:                                                                 
       - cd /tmp
       - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
